uqcs_shirts/static/style.css
body {
	background-image: url("bg.png");
	background-size: cover;
}
.container{
	background-color: white;
	padding: 2em;
}
.radio {
	margin-left: 20px;
}
.mockup{
	width: 100%;
}

.stripe {
	margin-left: 20px;
}

